--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
             <tr class="table-section hl-yellow">
-                <td class="smaller-section">Other Applications/Software</td>
+                <td class="smaller-section">Other Apps/Software</td>
             </tr>
             <tr>
                 <td>Microsoft Office</td>
