--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
 
         <form class="contact-form" action="https://formsubmit.co/b8542efb6c305c8754f9b54af15af41e" method="post">
             <input type="hidden" name="_subject" value="New email from Personal Website!">
-            <input type = "text" class = "contact-form-text" placeholder="Your Name" name="Name" required>
-            <input type = "email" class = "contact-form-text" placeholder="Your Email" name="Email" required>
-            <input type = "text" class = "contact-form-text" placeholder="Your Phone Number (optional)" name="Phone Number">
+            <input type = "text" class = "contact-form-text" placeholder="Name" name="Name" required>
+            <input type = "email" class = "contact-form-text" placeholder="Email" name="Email" required>
+            <input type = "text" class = "contact-form-text" placeholder="Phone No. (optional)" name="Phone Number">
             <textarea class = "contact-form-text" placeholder="Your Message" name="Message" required></textarea>
             <input type="hidden" name="_autoresponse" value="Hi, thank you for your message! Please give me 1-3 working days to get back to you.">
             <input type = "submit" class = "contact-form-btn" value="Send">
