--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang = "en">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Louis Pung</title>
+    <title>Louis Pung</title>
     <meta name="author" content="Louis Pung">
     <meta name="description" content="Louis Pung">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -377,7 +377,8 @@
             <input type = "email" class = "contact-form-text" placeholder="Email" name="Email" required>
             <input type = "text" class = "contact-form-text" placeholder="Phone No. (optional)" name="Phone Number">
             <textarea class = "contact-form-text" placeholder="Your Message" name="Message" required></textarea>
-            <input type="hidden" name="_autoresponse" value="Hi, thank you for your message! Please give me 1-3 working days to get back to you.">
+            <input type="hidden" name="_template" value="table">
+            <input type="hidden" name="_next" value="https://gnuppie.github.io/thankyou.html">
             <input type = "submit" class = "contact-form-btn" value="Send">
         </form>
 
