--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
             <input type = "text" class = "contact-form-text" placeholder="Phone No. (optional)" name="Phone Number">
             <textarea class = "contact-form-text" placeholder="Your Message" name="Message" required></textarea>
             <input type="hidden" name="_template" value="table">
-            <input type="hidden" name="_next" value="https://gnuppie.github.io/thankyou.html">
+            <input type="hidden" name="_next" value="https://gnuppie.github.io/thankyou">
             <input type = "submit" class = "contact-form-btn" value="Send">
         </form>
 
