--- a/thankyou.html
+++ b/thankyou.html
@@ -31,7 +31,7 @@
   <a href="https://www.instagram.com/louisgnup/" class="media-link"><i class="social-icon fab fa-instagram fa-2x"></i></a></li>
   <a href="https://www.linkedin.com/in/louis-pung-4b2543214/" class="media-link"><i class="fab fa-linkedin fa-2x"></i></a></li>
   <a href="https://github.com/gnuppie" class="media-link"><i class="fab fa-github fa-2x"></i></a></li>
-  <p><a href = "index.html">Return to Page</a></p>
+  <p><a href = "https://gnuppie.github.io">Return to Page</a></p>
 </div>
 
 </body>
