--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
             <img class="vertex-img sch" src="images/vertex.jpg" alt="vertex-img">
                 <div class="vertex-description educard">
                     <h3>Vertex Cheerleading Club | SUTD</h3>
+                    <h4 class="hl-yellow"><em>Vice-Captain <span class="sidenote">(2021-Present)</span></em></h4>
                     <h4 class="hl-yellow"><em>Logistics and Welfare Representative <span class="sidenote">(2020-2021)</span></em></h4>
                     <ul>
                         <li><strong class="hl-yellow">Coded scripts</strong> for significantly easier consolidation of personal information and expediting logistical processes</li>
@@ -378,7 +379,7 @@
             <input type = "text" class = "contact-form-text" placeholder="Phone No. (optional)" name="Phone Number">
             <textarea class = "contact-form-text" placeholder="Your Message" name="Message" required></textarea>
             <input type="hidden" name="_template" value="table">
-            <input type="hidden" name="_next" value="https://gnuppie.github.io/thankyou">
+            <input type="hidden" name="_next" value="https://gnuppie.github.io/thankyou.html">
             <input type = "submit" class = "contact-form-btn" value="Send">
         </form>
 
