--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
             <h1 class="hl-green">ABOUT ME</h1>
             <img class="profile-pic" src="images/circular cropped profile pic.png" alt="profile-img">
             <p>Hello there!</p>
-            <p>My name is Louis and I'm a freshmore student based in <span class="hl-yellow">Singapore</span>,
+            <p>My name is Louis and I'm a junior student based in <span class="hl-yellow">Singapore</span>,
                pursuing my Bachelor of Engineering in the <a href="https://www.sutd.edu.sg/"><i>Singapore University
                of Technology and Design (SUTD)</i></a>, majoring in
                 <span class="hl-yellow">Information Systems,Technology and Design</span>.</p>
@@ -145,8 +145,8 @@
                 <div class="uni-description educard">
                     <h3><a href="https://www.sutd.edu.sg/">Singapore University of Technology and Design</a></h3>
                     <h5><em>Est Graduation: 2024</em></h5>
-                    <h4><em class="sidenote">Bachelor of Engineering, Major in Information Systems, Technology and Design (intended)</em></h4>
-                    <p><strong class="hl-yellow">Cumulative GPA: 4.4</strong></p>
+                    <h4><em class="sidenote">Bachelor of Engineering, Major in Computer Science and Design (Focus Track: Software Engineering)</em></h4>
+                    <p><strong class="hl-yellow">Cumulative GPA: 4.39</strong></p>
                     <p>Recipient of <i class="hl-yellow">SUTD Undergraduate Merit Scholarship</i> for high academic performance</p>
                 </div>
             </div>
