--- a/index.html
+++ b/index.html
@@ -329,6 +329,10 @@
                 <td>Python</td>
                 <td>⭐⭐⭐⭐⭐</td>
             </tr>
+            <tr>
+                <td>Java</td>
+                <td>⭐⭐⭐⭐</td>
+            </tr>
             <tr class="table-section hl-yellow">
                 <td class="smaller-section">Other Apps/Software</td>
             </tr>
