--- a/index.html
+++ b/index.html
@@ -104,68 +104,71 @@
         </div>
         <div class="container-fluid title-container">
             <h1>Hi, I'm <span class="hl-green">Louis</span><div class="cursor hl-green"> </div></h1>
-            <h4>I'm currently <span class="ageJS"></span>.</h4>
+            <h4 class="hl-yellow"><span class="ageJS"></span>, based in Singapore</h4>
             <br>
             <p>Find out more about me</p>
-            <i class="fas fa-sort-down fa-2x green"></i>
+            <a href="#about-me" class="media-link"><i class="fas fa-sort-down fa-2x green bounce"></i></a>
         </div>
 
     </section>
 <!--About Me-->
-    <section id="about-me" class="info-card">
+    <section id="about-me" class="info-card reveal">
         <div class="container-fluid">
-            <h1 class="hl-green">ABOUT ME</h1>
+            <h1 class="hl-green">Hello World</h1>
             <img class="profile-pic" src="images/circular cropped profile pic.png" alt="profile-img">
-            <p>Hello there!</p>
-            <p>My name is Louis and I'm a junior student based in <span class="hl-yellow">Singapore</span>,
-               pursuing my Bachelor of Engineering in the <a href="https://www.sutd.edu.sg/"><i>Singapore University
-               of Technology and Design (SUTD)</i></a>, majoring in
-                <span class="hl-yellow">Information Systems,Technology and Design</span>.</p>
-            <p>I love all things food-related, whether it be cooking, consuming, searching for new foodie spots or
-            watching videos on YouTube. I am particularly crazy about cheese, curry and beef.
-            <img class="disappearing-pic sch" src="images/food.jpg" alt="food-img">
-            <p>This makes me obsessed with travel as well - to discover new sights and great food. I aspire to travel to
-               Iceland, United States, Italy and Greece, and my most frequented country of travel is Japan.</p>
+            <p>My name is Louis Pung, a penultimate <span class="hl-yellow">Computer Science and Design</span> student
+            in the <a href="https://www.sutd.edu.sg/"><i>Singapore University
+               of Technology and Design (SUTD)</i></a>.</p>
+
+            <p>I'm extremely <span class="hl-yellow">passionate about software development</span>, and am always trying
+               to come up with applications to ease and automate my life more.</p>
+
+            <p>When I'm not working, you can see me <span class="hl-yellow">obsess over food</span> - whether it be
+               consuming foodie/cooking videos or the actual consumption of good food. Surprise me with a good cheesy
+               or curry dish and you probably will be my new best friend.</p>
+
+            <p>Travel is another one of my guilty pleasures - I love viewing new sights (and tasting good food). This has
+               extended to a <span class="hl-yellow">love for photography</span> as well
+               (for the Instagram bragging rights).</p>
+
             <img class="disappearing-pic sch" src="images/travel-img.jpg" alt="travel-img">
-            <p>On the <em class="sidenote">(allegedly nerdier)</em> side, my other hobbies include
-               custom mechanical keyboards, reading <em>manga/web novels</em> and playing video games with friends.</p>
-            <img class="disappearing-pic sch" src="images/interest.png" alt="keyboard-img">
-            <p><span class="hl-yellow">I love the fresh aspect of learning new skills</span>, and
-                <span class="hl-yellow">challenging myself</span> to do things such like bungee-jumping,
-                solving a Rubik's Cube (personal best is sub-30 seconds!), as well as cheerleading.</p>
+
+            <p><strong><span class="hl-yellow">I am constantly challenging myself as I believe that it will spur me to improve
+                                      further. I thrive in stressful situations, and never back down from a tough
+                                      situation.</span></strong></p>
             <img class="disappearing-pic sch" src="images/cheer-img.jpg" alt="cheer-img">
         </div>
     </section>
 <!--Education-->
     <section id="education">
-        <h1 class="hl-green">EDUCATION</h1>
+        <h1 class="hl-green reveal">EDUCATION</h1>
         <div class="grid-container container-fluid">
-            <div class="uni-pic"><img class="sch" src="images/sutd.png" alt="uni-pic"></div>
-            <div class="justify-right">
+            <div class="uni-pic reveal"><img class="sch" src="images/sutd.png" alt="uni-pic"></div>
+            <div class="justify-right reveal">
                 <div class="uni-description educard">
                     <h3><a href="https://www.sutd.edu.sg/">Singapore University of Technology and Design</a></h3>
                     <h5><em>Est Graduation: 2024</em></h5>
-                    <h4><em class="sidenote">Bachelor of Engineering, Major in Computer Science and Design (Focus Track: Software Engineering)</em></h4>
-                    <p><strong class="hl-yellow">Cumulative GPA: 4.39</strong></p>
+                    <h4><em class="sidenote">Bachelor of Engineering, Major in Computer Science and Design</em></h4>
+                    <p class="hl-yellow">Cumulative GPA: 4.18</p>
                     <p>Recipient of <i class="hl-yellow">SUTD Undergraduate Merit Scholarship</i> for high academic performance</p>
                 </div>
             </div>
-            <div class="jc-pic"><img class="sch" src="images/sajc.jpg" alt="jc-pic"></div>
-            <div class="jc-description educard">
+            <div class="jc-pic reveal"><img class="sch" src="images/sajc.jpg" alt="jc-pic"></div>
+            <div class="jc-description educard reveal">
                 <h3><a href="https://standrewsjc.moe.edu.sg/">St Andrew’s Junior College</a></h3>
                 <h5><em>2016-2017</em></h5>
                 <p><strong>Received <span class="hl-yellow">3 distinctions</span> for GCE A Levels</strong></p>
             </div>
-            <div class="sec-pic"><img class="sch" src="images/sass.jpg" alt="sec-pic"></div>
-            <div class="justify-right">
+            <div class="sec-pic reveal"><img class="sch" src="images/sass.jpg" alt="sec-pic"></div>
+            <div class="justify-right reveal">
                 <div class="sec-description educard">
                     <h3><a href="https://standrewssec.moe.edu.sg/">St Andrew’s Secondary School</a></h3>
                     <h5><em>2012-2015</em></h5>
                     <p><strong>Received <span class="hl-yellow">7 distinctions</span> for GCE O Levels</strong></p>
                 </div>
             </div>
-            <div class="pri-pic"><img class="sch" src="images/sajs.jpg" alt="pri-pic"></div>
-            <div class="pri-description educard">
+            <div class="pri-pic reveal"><img class="sch" src="images/sajs.jpg" alt="pri-pic"></div>
+            <div class="pri-description educard reveal">
                 <h3><a href="https://www.saintandrewsjunior.moe.edu.sg/">St Andrew’s Junior School</a></h3>
                 <h5><em>2006-2011</em></h5>
                 <p class="sidenote">Received 1 A* and 3 As for PSLE</p>
@@ -176,7 +179,7 @@
 
     </section>
 <!--Work-->
-    <section id="experience" class="info-card">
+    <section id="experience" class="info-card reveal">
         <div class="container-fluid row">
             <h1 class="hl-green">WORK EXPERIENCE</h1>
 
@@ -211,43 +214,72 @@
       <div id="carouselExampleControls" class="carousel slide" data-interval="false">
           <div class="carousel-inner">
 
-            <div class="carousel-item active monopoly-img">
+            <div class="carousel-item active sds-img">
+                <h5 class="sidenote"> Service Design Studio | <em>SUTD May 2022 – August 2022</em></h5>
+                <h3><a href ="https://sites.google.com/view/team-1-to-1/home">Automated Product Extraction Dashboard</a></h3>
+                <ul>
+                    <li>Collaboration with startup <span class="hl-yellow">Monstyr</span></li>
+                    <li>Spearheaded team as a <span class="hl-yellow">Full Stack Developer</span></li>
+                    <li class="hl-cyan">Custom-trained Google AutoML model and other Google Cloud services were utilised</li>
+                </ul>
+            </div>
+
+             <div class="carousel-item kampung-img">
+              <h5 class="sidenote"> Introduction to Information Systems | <em>SUTD January 2022 – April 2022</em></h5>
+              <h3><a href="https://istd.sutd.edu.sg/term4-design-exhibition/50001/kampung">Kampung</a></h3>
+                <ul>
+                    <li>An <span class="hl-yellow">Android application</span> aimed at allowing individuals within communities to takeout food for each other</li>
+                    <li><span class="hl-cyan">Google Firebase</span> as the real-time relational database for user information and requests</li>
+                </ul>
+             </div>
+
+             <div class="carousel-item rune-img">
+              <h5 class="sidenote"> Computation Structures | <em>SUTD January 2022 – April 2022</em></h5>
+              <h3><a href="https://istd.sutd.edu.sg/term4-design-exhibition/50002/rune">Rune</a></h3>
+                <ul>
+                    <li><span class="hl-yellow">Alchitry-based</span> game machine, coded with <span class="hl-yellow">Lucid</span></li>
+                    <li>Prototyped the physical machine product using CAD-software <em>Rhino</em></li>
+                </ul>
+             </div>
+
+             <div class="carousel-item ddw-img">
+              <h5 class="sidenote"> Data Driven World | <em>SUTD September 2021 – December 2021</em></h5>
+              <h3><span class="hl-green">COVID-19 Linear Regression Model</span></h3>
+                <ul>
+                    <li>Data cleaning and model created in <span class="hl-yellow">Python</span></li>
+                    <li>Correlates daily temperature and precipitation levels to daily COVID-19 cases, in order to predict COVID-19 spread across seasons</li>
+                </ul>
+             </div>
+
+             <div class="carousel-item monopoly-img">
               <h5 class="sidenote"> Computational Thinking For Design | SUTD <em>(September 2020 - December 2020)</em></h5>
               <h3><a href="https://github.com/gnuppie/Monopoly-Deal-Python-Text-Game">Monopoly Deal</a></h3>
                 <ul>
                     <li>A text-based game coded in <span class="hl-yellow">Python</span> via procedural programming.</li>
                     <li>Allows for a variable number of players.</li>
                 </ul>
-            </div>
+             </div>
 
-            <div class="carousel-item parachute-img">
-              <h5 class="sidenote"> Term 1 2D Project | SUTD <em>(September 2020 - December 2020)</em></h5>
-              <h3>Foreign Aid Parachute Model</h3>
-                <ul>
-                    <li>Model designed on <span class="hl-yellow">Rhino CAD software.</span></li>
-                    <li><p>Simulations run on <span class="hl-yellow">Grasshopper</span> to mimic physical conditions.</p></li>
-                </ul>
-            </div>
-
-            <div class="carousel-item verticula-img">
+             <div class="carousel-item verticula-img">
                 <h5 class="sidenote"> Design Thinking and Innovation | SUTD <em>(January 2021 - April 2021)</em></h5>
                 <h3><a href="http://asd.courses.sutd.edu.sg/dti-teams/3-007-design-projects/cohort-7-design-projects/cohort-7-group-8/cohort-7-group-8-project-part-4/">
                     VERTICULA</a></h3>
                 <ul>
                     <li>An interactive, wheelchair-accessible table.</li>
                     <li>3D printed parts modelled using <span class="hl-yellow">Autodesk Fusion 360</span>.</li>
-                    <li>Infra-red sensors and LED lights under tabletop controlled using <span class="hl-yellow">Arduino</span>.</li>
+                    <li>Infra-red sensors and LED lights under tabletop controlled using <span class="hl-yellow">C++ programmed Arduino</span>.</li>
                 </ul>
-            </div>
+             </div>
 
-            <div class="carousel-item stirling-img">
-                <h5 class="sidenote"> Technological World | SUTD <em>(January 2021 - April 2021)</em></h5>
-                <h3>Electromagnetic Stirling Engine</h3>
+             <div class="carousel-item parachute-img">
+              <h5 class="sidenote"> Term 1 2D Project | SUTD <em>(September 2020 - December 2020)</em></h5>
+              <h3 class="hl-green">Foreign Aid Parachute Model</h3>
                 <ul>
-                    <li>Prototyped for use as a component of a hybrid engine, it utilises electromagnetism to reduce carbon footprint.</li>
-                    <li>Parts were modelled in <span class="hl-yellow">Autodesk Fusion 360</span> and 3D printed/laser-cutted.</li>
+                    <li>Model designed on <span class="hl-yellow">Rhino CAD software.</span></li>
+                    <li><p>Simulations run on <span class="hl-yellow">Grasshopper</span> to mimic physical conditions.</p></li>
                 </ul>
-            </div>
+             </div>
+
           </div>
 
             <button style="z-index: 0;" class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -264,21 +296,24 @@
     </section>
 <!--Leadership-->
     <section id="leadership">
-        <h1 class="hl-green">LEADERSHIP ROLES</h1>
+        <h1 class="hl-green reveal">LEADERSHIP ROLES</h1>
         <div class="grid-container-2">
-            <img class="vertex-img sch" src="images/vertex.jpg" alt="vertex-img">
-                <div class="vertex-description educard">
+            <img class="vertex-img sch reveal" src="images/vertex.jpg" alt="vertex-img">
+                <div class="vertex-description educard reveal">
                     <h3>Vertex Cheerleading Club | SUTD</h3>
-                    <h4 class="hl-yellow"><em>Vice-Captain <span class="sidenote">(2021-Present)</span></em></h4>
-                    <h4 class="hl-yellow"><em>Logistics and Welfare Representative <span class="sidenote">(2020-2021)</span></em></h4>
+                    <h4 class="hl-yellow"><em>Captain <span class="sidenote">(2022-Present)</span></em></h4>
+                    <h6 class="sidenote"><em>Vice-Captain (2021-2022)</em></h6>
+                    <h6 class="sidenote"><em>Logistics and Welfare Representative (2020-2021)</em></h6>
                     <ul>
-                        <li><strong class="hl-yellow">Coded scripts</strong> for significantly easier consolidation of personal information and expediting logistical processes</li>
+                        <li>Digitized administrative processes through building a <strong class="hl-yellow">Python-based Telegram Bot</strong></li>
+                        <li><strong class="hl-yellow">Developed application using Python</strong> for consolidation of club information and logistics</li>
                         <li>Organized and liaised with the university to conduct camps and other extra-curricular activities</li>
+                        <li><em class="hl-yellow">2nd Runner-up within the Group Elite Category for IMC Cheer Rocks in 2022</em></li>
                     </ul>
                 </div>
-            <img class="guitar-img sch" src="images/guitar.jpg" alt="guitar-img">
+            <img class="guitar-img sch reveal" src="images/guitar.jpg" alt="guitar-img">
             <div class="justify-right">
-                <div class="guitar-description educard">
+                <div class="guitar-description educard reveal">
                     <h3> Guitar Ensemble | SAJC</h3>
                     <h4 class="hl-yellow"><em>Logistics Representative <span class="sidenote">(2016-2017)</span></em></h4>
                     <ul>
@@ -287,8 +322,8 @@
                     </ul>
                 </div>
             </div>
-            <i class="fas fa-swimmer fa-10x swimming-img"></i>
-                <div class="swimming-description educard">
+            <i class="fas fa-swimmer fa-10x swimming-img reveal"></i>
+                <div class="swimming-description educard reveal">
                     <h3> Swimming | SASS</h3>
                     <h4 class="hl-yellow"><em>Vice-Captain <span class="sidenote">(2014-2015)</span></em></h4>
                     <ul>
@@ -306,61 +341,56 @@
         <table class="table table-text">
             <tbody>
             <tr class="table-section hl-yellow">
-                <td class="smaller-section">Frontend Development</td>
+                <td class="smaller-section">Programming Languages</td>
             </tr>
-            <tr>
-                <td>HTML</td>
-                <td>⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
-                <td>CSS</td>
-                <td>⭐⭐⭐</td>
-            </tr>
-            </tr>
-            <tr>
-                <td>Bootstrap</td>
-                <td>⭐⭐⭐</td>
-            </tr>
-            </tr>
-            <tr class="table-section hl-yellow">
-                <td class="smaller-section">General Coding Language</td>
-            </tr>
-            <tr>
-                <td>Python</td>
-                <td>⭐⭐⭐⭐⭐</td>
-            </tr>
-            <tr>
+            <tr class="reveal">
                 <td>Java</td>
-                <td>⭐⭐⭐⭐</td>
+            </tr>
+            <tr class="reveal">
+                <td>Python</td>
+            </tr>
+            <tr class="reveal">
+                <td>Ruby</td>
+            </tr>
+            <tr class="reveal">
+                <td>JavaScript</td>
+            </tr>
+            <tr class="reveal">
+                <td>HTML</td>
+            </tr>
+            <tr class="reveal">
+                <td>CSS</td>
+            </tr>
+            </tr>
+
+            <tr class="table-section hl-yellow">
+                <td class="smaller-section">Frameworks</td>
+            </tr>
+            <tr class="reveal">
+                <td>Bootstrap</td>
+            </tr>
+            <tr class="reveal">
+                <td>Rails</td>
             </tr>
             <tr class="table-section hl-yellow">
                 <td class="smaller-section">Other Apps/Software</td>
             </tr>
-            <tr>
+            <tr class="reveal">
                 <td>Microsoft Office</td>
-                <td>⭐⭐⭐⭐</td>
             </tr>
-            <tr>
+            <tr class="reveal">
                 <td>Adobe</td>
-                <td>⭐⭐⭐</td>
             </tr>
-            <tr>
-            </tr>
-            <tr>
+            <tr class="reveal">
                 <td>Rhino</td>
-                <td>⭐⭐</td>
-            </tr>
-            <tr>
-                <td>Autodesk Fusion 360</td>
-                <td>⭐⭐</td>
             </tr>
             <tr class="table-section hl-yellow">
                 <td class="smaller-section">Languages</td>
             </tr>
-            <tr>
+            <tr class="reveal">
                 <td>English</td>
             </tr>
-            <tr>
+            <tr class="reveal">
                 <td>Mandarin</td>
             </tr>
             </tbody>
@@ -372,7 +402,7 @@
     <div id="contact">
         <div class="close">+</div>
 
-        <h1>Reach me here! <i class="fas fa-sort-down"></i></h1>
+        <h1>Let's Connect!</h1>
 
         <form class="contact-form" action="https://formsubmit.co/b8542efb6c305c8754f9b54af15af41e" method="post">
             <input type="hidden" name="_subject" value="New email from Personal Website!">
